deploy/k8s/monolith/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: danmakustream
  labels:
    app.kubernetes.io/part-of: danmakustream
    app.kubernetes.io/stage: monolith
