deploy/k8s/monolith/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: danmakustream
spec:
  selector: { app: mysql }
  ports:
    - { port: 3306, targetPort: 3306 }
