deploy/k8s/monolith/nginx-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway
  namespace: danmakustream
spec:
  selector: { app: nginx-gateway }
  ports:
    - { port: 80, targetPort: 80 }
